Add desktop navigation with mega-menu

--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -274,7 +274,8 @@
       "cart_count": {
         "one": "{{ count }} item",
         "other": "{{ count }} items"
-      }
+      },
+      "shop_all": "Shop All"
     },
     "cart": {
       "title": "Your cart",
